# aiotftp

./: flake.nix  pyproject.toml  setup.py
aiotftp/: __init__.py  packet.py  server.py
example/: server.py
old/: pyproject.toml
